xsettings: Expose monitored settings through D-Bus

A number of things that gnome-settings-daemon monitors for all the GTK+
applications aren't currently available for GTK+ Wayland clients, only
through XSettings.

As we already monitor fontconfig configurations, enabled GTK+ modules
and whether applications should use animations, export those through a
D-Bus interface.

See https://bugzilla.gnome.org/show_bug.cgi?id=786693

Based on patch by Martin Blanchard <tchaik@gmx.com>

https://bugzilla.gnome.org/show_bug.cgi?id=786694